src/poi/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
spec:
  selector: # Define the wrapping strategy
    matchLabels: # Match all pods with the defined labels
      app: poi # Labels follow the `name: value` template
  template: # This is the template of the pod inside the deployment
    metadata:
      labels:
        app: poi
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: acrchallenge01.azurecr.io/challenge01/poi
          name: poi
          ports:
            - containerPort: 80
              name: http
