src/poi/ingress.yaml
#ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poi
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: tripviewer.87086d9fa929405ba0e9.eastus.aksapp.io
      http:
        paths:
          - backend: # How the ingress will handle the requests
              service:
                name: poi # Which service the request will be forwarded to
                port:
                  name: http # Which port in that service
            path: /api/poi # Which path is this rule referring to
            pathType: Prefix # See more at https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
